--- a/Pipfile
+++ b/Pipfile
@@ -6,12 +6,10 @@ name = "pypi"
 [packages]
 django = "*"
 gunicorn = "*"
-heroku = "*"
+requests = "*"
 
 [dev-packages]
 flake8 = "*"
 
 [requires]
 python_version = "3.10"
-
-
