--- a/.github/workflows/django_ci.yml
+++ b/.github/workflows/django_ci.yml
@@ -24,11 +24,13 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python 3.10.2
+    - name: Set up Python 3.10
       uses: actions/setup-python@v1
       with:
-        python-version: 3.10.2
-    #colocar aqui a linha do run contribi depois de criar a pasta
+        python-version: 3.10
+    - name: Copying configurations
+      run: |
+        cp contrib/env-sample .env
     - name: Install dependencies
       run: |
         pip install pipenv
