Staticfiles não criado

--- a/.github/workflows/django_ci.yml
+++ b/.github/workflows/django_ci.yml
@@ -1,10 +1,10 @@
-name: Python application
+name: ci
 
 on:
   pull_request:
   push:
     branches:
-      - master
+      - main
 
 jobs:
   build:
