--- a/.pyup.yml
+++ b/.pyup.yml
@@ -1,3 +1,11 @@
+Update: all
+Search: True
+Pin: True
+Default Branch: main
+Branch pre-fix: pyup-
+Close PRs: True
+Label PRs: False
+Update hashes: True
 requirements:
   - Pipfile
   - Pipfile.lock
