--- a/.github/workflows/django_ci.yml
+++ b/.github/workflows/django_ci.yml
@@ -19,7 +19,7 @@ jobs:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
           POSTGRES_DB: postgres
-        #ports: [ '5432:5432' ]
+        ports: [ '5432:5432' ]
 
     steps:
     - uses: actions/checkout@v2
