--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,8 @@ psycopg2-binary = "*"
 django-s3-folder-storage = "*"
 collectfast = "*"
 django-debug-toolbar = "*"
+sdk = "*"
+sentry-sdk = "*"
 
 [dev-packages]
 flake8 = "*"
